# Basic-Chess

./: CMakeLists.txt  README.md
src/: main.cpp
src/chess/: chess.cpp  chess.h  piece.cpp  piece.h
src/drawer/: drawer.cpp  drawer.h  mbutton.cpp  mbutton.h
src/game/: game.cpp  game.h
